@@ -9,8 +9,8 @@ exportClasses( Module, "C++Class", "C++Object", "C++ObjectS3" )
 export( Module )
 exportMethods( new )
 
-importFrom( utils, .DollarNames )
+importFrom( utils, .DollarNames, prompt )
 S3method( .DollarNames, "C++ObjectS3" )
 S3method( .DollarNames, "Module" )
-exportMethods( complete )
+exportMethods( prompt )
 
