@@ -1,0 +1,38 @@
+\name{yada}
+\alias{yada}
+\docType{data}
+\title{
+	Rcpp module: %% ~~ Name of the module ~~
+}
+\description{
+	Rcpp module %%  ~~ A concise description of the module ~~
+}
+\usage{data(yada)}
+\details{
+	The module contains the following items: 
+	
+	functions: \describe{
+        \item{bar}{ ~~ description of function bar ~~ }
+        \item{bla}{ ~~ description of function bla ~~ }
+        \item{bla1}{ ~~ description of function bla1 ~~ }
+        \item{bla2}{ ~~ description of function bla2 ~~ }
+        \item{foo}{ ~~ description of function foo ~~ }
+        \item{hello}{ ~~ description of function hello ~~ }
+	} 
+	
+	classes: \describe{
+        \item{World}{ ~~ description of class World ~~ }
+	}
+}
+\source{
+%% ~~ reference to a publication or URL ~~
+%% ~~ perhaps a reference to the project page of the c++ code being exposed ~~
+}
+\references{
+%% ~~ possibly secondary sources and usages ~~
+%% ~~ perhaps references to the C++ code that the module exposes ~~
+}
+\examples{
+show( yada )
+}
+\keyword{datasets}
